unpackaged/main/default/objects/pse__Resource_Planner_Preferences__c/pse__Resource_Planner_Preferences__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>User preferences that determine the look and feel of the resource planner.</description>
    <label>Planners Preferences - Resource</label>
</CustomObject>