unpackaged/main/default/objects/pse__Resource_Planner_Preferences__c/fields/pse__Resource_Availability_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Availability_In_Hours__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, availability displays in hours in the Resource Availability column in the Resource Planner. If deselected, availability displays as a percentage. This value is deselected by default.</description>
    <inlineHelpText>If selected, availability displays in hours in the Resource Availability column in the Resource Planner. If deselected, availability displays as a percentage. This value is deselected by default.</inlineHelpText>
    <label>Resource Availability in Hours</label>
    <type>Checkbox</type>
</CustomField>