unpackaged/main/default/objects/pse__Resource_Planner_Preferences__c/fields/pse__Upper_Threshold_Summary_Bar_Limit__c.field-meta.xml
<CustomField>
    <fullName>pse__Upper_Threshold_Summary_Bar_Limit__c</fullName>
    <defaultValue>100</defaultValue>
    <description>Defines the upper limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green resource summary color code used in Resource Planner.</description>
    <inlineHelpText>Defines the upper limit of the resource allocation percentage considered correctly allocated. Resources within this threshold display as the green  resource summary color code used in Resource Planner.</inlineHelpText>
    <label>Upper threshold summary bar limit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>