unpackaged/main/default/objects/pse__Resource_Planner_Preferences__c/fields/pse__Use_Utilization_Target__c.field-meta.xml
<CustomField>
    <fullName>pse__Use_Utilization_Target__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected, the Utilization Target field on the Resource is used to determine red/yellow/green colors in Resource Planner, not 100% of work calendar hours.</description>
    <inlineHelpText>If selected, the Utilization Target field on the Resource is used to determine red/yellow/green colors in Resource Planner, not 100% of work calendar hours.</inlineHelpText>
    <label>Use Utilization Target</label>
    <type>Checkbox</type>
</CustomField>