unpackaged/main/default/objects/pse__Resource_Planner_Preferences__c/fields/pse__Zoom_Level__c.field-meta.xml
<CustomField>
    <fullName>pse__Zoom_Level__c</fullName>
    <defaultValue>"week"</defaultValue>
    <inlineHelpText>The default timeline zoom level. Enter a value of quarter, month, week or day. The default value is "week".</inlineHelpText>
    <label>Zoom Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>